--- a/docs/language/built-in-functions.mdx
+++ b/docs/language/built-in-functions.mdx
@@ -31,8 +31,10 @@ title: Built-in Functions
 
   NOTE: The use of this function is unsafe if not used correctly.
 
-  Follow [best practices](https://github.com/ConsenSys/smart-contract-best-practices/blob/051ec2e42a66f4641d5216063430f177f018826e/docs/recommendations.md#remember-that-on-chain-data-is-public)
+  Follow [best practices](https://github.com/ConsenSys/smart-contract-best-practices/blob/18e446414ad22377e7f205056af6f2e96971dcf7/docs/development-recommendations/general/public-data.md)
   to prevent security issues when using this function.
+  
+  **Also note that this function returns the exact same random number to every call within the same block.**
 
 ## RLP
 
